--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
 <head>
     <meta charset="utf-8">
     <title>MathZilla</title>
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 </head>
 
 <body>
     <div id="container">
+        <div id="header">
+            <div id="brand_name">
+                <h1><a href="#">Maths the Fun Way</a></h1>
+            </div>
     
+            <div id="search-bar">
+                <form method="get">
+                    <input type="text" class = "text">
+                    <input type="submit" value="Search a topic" class="submit">
+                </form>
+            </div>
+            <div class="clear">
+
+            </div>
+        </div>
+
+        <div id="menu">
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Online Tutorials</a></li>
+                <li><a href="#">Get a private tutor</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
 
 
     </div>
