--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                     <li><a href="#">Complete curriculum.</a></li>
             </ul>
         </div>
+        <div class="clear"></div>
+        <footer class="footer">
+            <p>MathZilla Inc. &copy; 2010-2015</p>
+        </footer>
 
 
     </div>
